flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/Flow_OneView__c.object-meta.xml
<CustomObject>
    <description>Object to hold the design of the records being built inside of the Flow OneView utility</description>
    <label>Flow OneView</label>
    <nameField>
        <displayFormat>FOV-{0000000}</displayFormat>
        <label>Flow OneView Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow OneViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>