flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/actionName__c.field-meta.xml
<CustomField>
    <fullName>actionName__c</fullName>
    <description>used for actionCalls</description>
    <label>actionName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>