flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/actionType__c.field-meta.xml
<CustomField>
    <fullName>actionType__c</fullName>
    <description>used for actionCalls</description>
    <label>actionType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>