flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/apexClass__c.field-meta.xml
<CustomField>
    <fullName>apexClass__c</fullName>
    <label>apexClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>