flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/booleanValue__c.field-meta.xml
<CustomField>
    <fullName>booleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>booleanValue</label>
    <type>Checkbox</type>
</CustomField>