flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/colType__c.field-meta.xml
<CustomField>
    <fullName>colType__c</fullName>
    <description>used for collectionProcessors, loops, recordCreates, recordDeletes, recordLookups, recordUpdates</description>
    <label>colType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>