flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/connector__c.field-meta.xml
<CustomField>
    <fullName>connector__c</fullName>
    <label>connector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>