flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/DataType_Display__c.field-meta.xml
<CustomField>
    <fullName>DataType_Display__c</fullName>
    <label>DataType_Display</label>
    <length>256</length>
    <type>Html</type>
</CustomField>