flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/defaultConnector__c.field-meta.xml
<CustomField>
    <fullName>defaultConnector__c</fullName>
    <description>default</description>
    <label>defaultConnector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>