flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <description>Used for both Resources &amp; Elements</description>
    <label>description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>