flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/Detail_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Detail_Sequence__c</fullName>
    <description>Set the display order of the Detail messages</description>
    <label>Detail Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>