flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/Display_Rich_Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Display_Rich_Text_Value__c</fullName>
    <label>Display Rich Text Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>