flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/Display_Value__c.field-meta.xml
<CustomField>
    <fullName>Display_Value__c</fullName>
    <description>Convert all possible values, text, expression to a common field for fidplay</description>
    <label>Display Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>