flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/Element_label__c.field-meta.xml
<CustomField>
    <fullName>Element_label__c</fullName>
    <label>Element label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>