flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/Element_Type__c.field-meta.xml
<CustomField>
    <fullName>Element_Type__c</fullName>
    <label>Element Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>