flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/expression__c.field-meta.xml
<CustomField>
    <fullName>expression__c</fullName>
    <label>expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>