flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/faultConnector__c.field-meta.xml
<CustomField>
    <fullName>faultConnector__c</fullName>
    <description>isOtherConnector</description>
    <label>faultConnector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>