flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/flowName__c.field-meta.xml
<CustomField>
    <fullName>flowName__c</fullName>
    <description>used for subflows element</description>
    <label>flowName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>