flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/Inner_Loop_Label__c.field-meta.xml
<CustomField>
    <fullName>Inner_Loop_Label__c</fullName>
    <description>The Element Label of the innermost Loop that contains this Element</description>
    <label>Inner Loop Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>