flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/isDetail__c.field-meta.xml
<CustomField>
    <fullName>isDetail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records are either Detail, Resource or Element(Node)</description>
    <label>isDetail</label>
    <type>Checkbox</type>
</CustomField>