flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/isElement__c.field-meta.xml
<CustomField>
    <fullName>isElement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records are either Detail, Resource or Element(Node)</description>
    <label>isElement</label>
    <type>Checkbox</type>
</CustomField>