flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/isFirstOnly__c.field-meta.xml
<CustomField>
    <fullName>isFirstOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for recordLookups (Get Records)</description>
    <label>isFirstOnly</label>
    <type>Checkbox</type>
</CustomField>