flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/isHardCoded__c.field-meta.xml
<CustomField>
    <fullName>isHardCoded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHardCoded</label>
    <type>Checkbox</type>
</CustomField>