flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/isInput__c.field-meta.xml
<CustomField>
    <fullName>isInput__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isInput</label>
    <type>Checkbox</type>
</CustomField>