flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/isOrphan__c.field-meta.xml
<CustomField>
    <fullName>isOrphan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOrphan</label>
    <type>Checkbox</type>
</CustomField>