flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/isOtherConnector__c.field-meta.xml
<CustomField>
    <fullName>isOtherConnector__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for extra records to store a connector value for an element with fault or noMoreValues connectors</description>
    <label>isOtherConnector</label>
    <type>Checkbox</type>
</CustomField>