flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/isOutput__c.field-meta.xml
<CustomField>
    <fullName>isOutput__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOutput</label>
    <type>Checkbox</type>
</CustomField>