flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/isPassed__c.field-meta.xml
<CustomField>
    <fullName>isPassed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used when processing connectors in the utility</description>
    <label>isPassed</label>
    <type>Checkbox</type>
</CustomField>