flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/locationX__c.field-meta.xml
<CustomField>
    <fullName>locationX__c</fullName>
    <label>locationX</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>