flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/locationY__c.field-meta.xml
<CustomField>
    <fullName>locationY__c</fullName>
    <label>locationY</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>