flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>