flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/nextValueConnector__c.field-meta.xml
<CustomField>
    <fullName>nextValueConnector__c</fullName>
    <description>default</description>
    <label>nextValueConnector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>