flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/noMoreValuesConnector__c.field-meta.xml
<CustomField>
    <fullName>noMoreValuesConnector__c</fullName>
    <description>isOtherConnector</description>
    <label>noMoreValuesConnector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>