flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/objectType__c.field-meta.xml
<CustomField>
    <fullName>objectType__c</fullName>
    <description>used for resources and for elements</description>
    <label>objectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>