flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/recordTriggerType__c.field-meta.xml
<CustomField>
    <fullName>recordTriggerType__c</fullName>
    <description>used for Start element</description>
    <label>recordTriggerType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>