flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/Resource_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Resource_Metadata__c</fullName>
    <description>Used for both Resources &amp; Elements</description>
    <label>Resource Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>