flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/Resource_name__c.field-meta.xml
<CustomField>
    <fullName>Resource_name__c</fullName>
    <description>Used for both Resources &amp; Elements</description>
    <label>Resource name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>