flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/ruleLabel__c.field-meta.xml
<CustomField>
    <fullName>ruleLabel__c</fullName>
    <description>label or defaultConnectorLabel for decisions &amp; waits</description>
    <label>ruleLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>