flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/scale__c.field-meta.xml
<CustomField>
    <fullName>scale__c</fullName>
    <label>scale</label>
    <length>20</length>
    <type>Text</type>
</CustomField>