flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/text__c.field-meta.xml
<CustomField>
    <fullName>text__c</fullName>
    <label>text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>