flow_apps/FlowUtilities/force-app/main/default/objects/Flow_OneView__c/fields/triggerType__c.field-meta.xml
<CustomField>
    <fullName>triggerType__c</fullName>
    <description>used for Start element</description>
    <label>triggerType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>